[tool.poetry]
name = "rag-test"
version = "0.1.0"
description = ""
authors = ["Nisuga Jayawardana <nisuga.rockwell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"
trulens-eval = "^0.19.1"
notebook = "^7.0.6"
llama-index = "^0.9.15.post2"
openai = "^1.5.0"
pypdf = "^3.17.3"
transformers = "^4.36.1"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
